--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#home">HOME</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about-us">ABOUT US</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">TEAM</a></li>
+<!--                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">TEAM</a></li>-->
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">CONTACT</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="indexHe.html">עברית</a></li>
                 </ul>
@@ -118,81 +118,81 @@
         </div>
     </section>
     <!-- The Team-->
-    <section>
-        <div id="team" style="background-color: #8dbf22;">
-            <div class="container p-0">
-                <div class="col-lg-12 text-center">
-                    <h2 class="text-white mt-0" style="padding-top: 5%;">Meet team awesome!</h2>
-                    <hr class="divider light my-4" />
-                    <p class="text-white-50 mb-4">We're Computer Science students on the mission to create a world full of bridges and equality for all.</p>
-                </div>
-                <div class="row no-gutters">
-                    <!-- Team Member 1 -->
-                    <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-0 shadow">
-                            <img src="assets/assets/enav.jpeg" class="card-img-top" alt="...">
-                            <div class="card-body text-center">
-                                <h5 class="card-title mb-0">Enav Sasson</h5>
-                                <div class="card-text text-black-50">Business development</div>
-                                <hr class="teamhr">
-                                <div class="social">
-                                    <a href="#" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
-                                    <a href="#" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Team Member 2 -->
-                    <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-0 shadow">
-                            <img src="assets/assets/david.jpeg" class="card-img-top" alt="...">
-                            <div class="card-body text-center">
-                                <h5 class="card-title mb-0">David German</h5>
-                                <div class="card-text text-black-50">Chief Technology Officer</div>
-                                <hr class="teamhr">
-                                <div class="social">
-                                    <a href="https://github.com/GermanDavid" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
-                                    <a href="https://www.linkedin.com/in/davidgermann/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Team Member 3 -->
-                    <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-0 shadow">
-                            <img src="assets/assets/ehud.jpeg" class="card-img-top" alt="...">
-                            <div class="card-body text-center">
-                                <h5 class="card-title mb-0">Ehud Barda</h5>
-                                <div class="card-text text-black-50">Product Manager</div>
-                                <hr class="teamhr">
-                                <div class="social">
-                                    <a href="#" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
-                                    <a href="#" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Team Member 4 -->
-                    <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-0 shadow">
-                            <img src="assets/assets/yarin.jpeg" class="card-img-top" alt="...">
-                            <div class="card-body text-center">
-                                <h5 class="card-title mb-0">Yarin Michael Bouzaglo</h5>
-                                <div class="card-text text-black-50">Chief Executive Officer</div>
-                                <hr class="teamhr">
-                                <div class="social">
-                                    <a href="https://github.com/YarinBou" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
-                                    <a href="https://www.linkedin.com/in/yarin-bouzaglo/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<!--    <section>-->
+<!--        <div id="team" style="background-color: #8dbf22;">-->
+<!--            <div class="container p-0">-->
+<!--                <div class="col-lg-12 text-center">-->
+<!--                    <h2 class="text-white mt-0" style="padding-top: 5%;">Meet team awesome!</h2>-->
+<!--                    <hr class="divider light my-4" />-->
+<!--                    <p class="text-white-50 mb-4">We're Computer Science students on the mission to create a world full of bridges and equality for all.</p>-->
+<!--                </div>-->
+<!--                <div class="row no-gutters">-->
+<!--                    &lt;!&ndash; Team Member 1 &ndash;&gt;-->
+<!--                    <div class="col-xl-3 col-md-6 mb-4">-->
+<!--                        <div class="card border-0 shadow">-->
+<!--                            <img src="assets/assets/enav.jpeg" class="card-img-top" alt="...">-->
+<!--                            <div class="card-body text-center">-->
+<!--                                <h5 class="card-title mb-0">Enav Sasson</h5>-->
+<!--                                <div class="card-text text-black-50">Business development</div>-->
+<!--                                <hr class="teamhr">-->
+<!--                                <div class="social">-->
+<!--                                    <a href="#" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>-->
+<!--                                    <a href="#" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    &lt;!&ndash; Team Member 2 &ndash;&gt;-->
+<!--                    <div class="col-xl-3 col-md-6 mb-4">-->
+<!--                        <div class="card border-0 shadow">-->
+<!--                            <img src="assets/assets/david.jpeg" class="card-img-top" alt="...">-->
+<!--                            <div class="card-body text-center">-->
+<!--                                <h5 class="card-title mb-0">David German</h5>-->
+<!--                                <div class="card-text text-black-50">Chief Technology Officer</div>-->
+<!--                                <hr class="teamhr">-->
+<!--                                <div class="social">-->
+<!--                                    <a href="https://github.com/GermanDavid" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>-->
+<!--                                    <a href="https://www.linkedin.com/in/davidgermann/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    &lt;!&ndash; Team Member 3 &ndash;&gt;-->
+<!--                    <div class="col-xl-3 col-md-6 mb-4">-->
+<!--                        <div class="card border-0 shadow">-->
+<!--                            <img src="assets/assets/ehud.jpeg" class="card-img-top" alt="...">-->
+<!--                            <div class="card-body text-center">-->
+<!--                                <h5 class="card-title mb-0">Ehud Barda</h5>-->
+<!--                                <div class="card-text text-black-50">Product Manager</div>-->
+<!--                                <hr class="teamhr">-->
+<!--                                <div class="social">-->
+<!--                                    <a href="#" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>-->
+<!--                                    <a href="#" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    &lt;!&ndash; Team Member 4 &ndash;&gt;-->
+<!--                    <div class="col-xl-3 col-md-6 mb-4">-->
+<!--                        <div class="card border-0 shadow">-->
+<!--                            <img src="assets/assets/yarin.jpeg" class="card-img-top" alt="...">-->
+<!--                            <div class="card-body text-center">-->
+<!--                                <h5 class="card-title mb-0">Yarin Michael Bouzaglo</h5>-->
+<!--                                <div class="card-text text-black-50">Chief Executive Officer</div>-->
+<!--                                <hr class="teamhr">-->
+<!--                                <div class="social">-->
+<!--                                    <a href="https://github.com/YarinBou" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>-->
+<!--                                    <a href="https://www.linkedin.com/in/yarin-bouzaglo/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
     <!-- Contact-->
-    <section class="page-section" id="contact">
+    <section class="page-section" id="contact"  style="background-color: #8dbf22; color: white">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
@@ -214,7 +214,7 @@
             </div>
         </div>
     </section>
-    <section class="page-section" id="social" style="background-color: #f1ba2e;">
+    <section class="page-section" id="social" style="background-color: #f1ba2e;" >
         <div class="container" style="text-align: center;">
             <h2 style="color: white;">We
                 <i class="fas fa-heart"></i> making new friends!</h2>
@@ -235,7 +235,7 @@
         </div>
     </section>
     <!-- Footer-->
-    <footer class="bg-light py-5">
+    <footer class="bg-light py-5"  style="background-color: #f1ba2e;">
         <div class="container small text-center text-muted ">
             <p style="text-align: center;">Copyright © 2020 - Aspie</p>
         </div>
