--- a/indexHe.html
+++ b/indexHe.html
@@ -35,7 +35,7 @@
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#home">דף הבית</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about-us">קצת עלינו</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">הצוות</a></li>
+<!--                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">הצוות</a></li>-->
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">צור קשר</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">ENGLISH</a></li>
                 </ul>
@@ -71,8 +71,9 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <h2 class="text-white mt-0">אנו רוצים ליצור את הפלטפורמה האידיאלית
-                        <br>ליצירת קשרים חברתיים ומציאת אהבה </h2>
+                    <h2 class="text-white mt-0">אנו רוצים להיות הבית הבטוח
+                        של אנשים על הרצף האוטיסטי
+                        ברשת </h2>
                     <hr class="divider light my-4" />
                     <p style="color: white;">.הפלטפורמה הנה אפליקציית היכרויות לאנשים במגוון האוטיסטי<br> אנו רוצים ליצור מרחב וירטואלי מוגן ככל הניתן שבו תוכל להכיר חברים חדשים<br> .לשתף את הרגשות שלכם, ולמצוא אהבה חדשה</p>
                 </div>
@@ -119,81 +120,81 @@
         </div>
     </section>
     <!-- The Team-->
-    <section>
-        <div id="team" style="background-color: #8dbf22;">
-            <div class="container p-0">
-                <div class="col-lg-12 text-center">
-                    <h2 class="text-white mt-0" style="padding-top: 5%;">!הכירו את הצוות</h2>
-                    <hr class="divider light my-4" />
-                    <p class="text-white-50 mb-4">.אנו סטודנטים למדעי המחשב במרכז הבינתחומי הרצליה שהמשימה שלהם היא להפוך את העולם למקום בעל הזדמנויות שוות לכולם <br> .אנו מאמינים שקשרים חברתיים אינם פריבילגיה אלה זכות בסיסית </p>
-                </div>
-                <div class="row no-gutters">
-                    <!-- Team Member 1 -->
-                    <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-0 shadow">
-                            <img src="assets/assets/enav.jpeg" class="card-img-top" alt="...">
-                            <div class="card-body text-center">
-                                <h5 class="card-title mb-0">ענב ששון</h5>
-                                <div class="card-text text-black-50">מנהל פיתוח עיסקי</div>
-                                <hr class="teamhr">
-                                <div class="social">
-                                    <a href="#" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
-                                    <a href="#" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Team Member 2 -->
-                    <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-0 shadow">
-                            <img src="assets/assets/david.jpeg" class="card-img-top" alt="...">
-                            <div class="card-body text-center">
-                                <h5 class="card-title mb-0">דויד גרמן</h5>
-                                <div class="card-text text-black-50">מנהל טכנולוגי </div>
-                                <hr class="teamhr">
-                                <div class="social">
-                                    <a href="https://github.com/GermanDavid" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
-                                    <a href="https://www.linkedin.com/in/davidgermann/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Team Member 3 -->
-                    <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-0 shadow">
-                            <img src="assets/assets/ehud.jpeg" class="card-img-top" alt="...">
-                            <div class="card-body text-center">
-                                <h5 class="card-title mb-0">אהוד ברדה</h5>
-                                <div class="card-text text-black-50">מנהל מוצר</div>
-                                <hr class="teamhr">
-                                <div class="social">
-                                    <a href="#" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
-                                    <a href="#" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Team Member 4 -->
-                    <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-0 shadow">
-                            <img src="assets/assets/yarin.jpeg" class="card-img-top" alt="...">
-                            <div class="card-body text-center">
-                                <h5 class="card-title mb-0">ירין מיכאל בוזגלו </h5>
-                                <div class="card-text text-black-50">מנכ"ל</div>
-                                <hr class="teamhr">
-                                <div class="social">
-                                    <a href="https://github.com/YarinBou" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
-                                    <a href="https://www.linkedin.com/in/yarin-bouzaglo/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Contact-->
-    <section class="page-section" id="contact">
+<!--    <section>-->
+<!--        <div id="team" style="background-color: #8dbf22;">-->
+<!--            <div class="container p-0">-->
+<!--                <div class="col-lg-12 text-center">-->
+<!--                    <h2 class="text-white mt-0" style="padding-top: 5%;">!הכירו את הצוות</h2>-->
+<!--                    <hr class="divider light my-4" />-->
+<!--                    <p class="text-white-50 mb-4">.אנו סטודנטים למדעי המחשב במרכז הבינתחומי הרצליה שהמשימה שלהם היא להפוך את העולם למקום בעל הזדמנויות שוות לכולם <br> .אנו מאמינים שקשרים חברתיים אינם פריבילגיה אלה זכות בסיסית </p>-->
+<!--                </div>-->
+<!--                <div class="row no-gutters">-->
+<!--                    &lt;!&ndash; Team Member 1 &ndash;&gt;-->
+<!--                    <div class="col-xl-3 col-md-6 mb-4">-->
+<!--                        <div class="card border-0 shadow">-->
+<!--                            <img src="assets/assets/enav.jpeg" class="card-img-top" alt="...">-->
+<!--                            <div class="card-body text-center">-->
+<!--                                <h5 class="card-title mb-0">ענב ששון</h5>-->
+<!--                                <div class="card-text text-black-50">מנהל פיתוח עיסקי</div>-->
+<!--                                <hr class="teamhr">-->
+<!--                                <div class="social">-->
+<!--                                    <a href="#" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>-->
+<!--                                    <a href="#" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    &lt;!&ndash; Team Member 2 &ndash;&gt;-->
+<!--                    <div class="col-xl-3 col-md-6 mb-4">-->
+<!--                        <div class="card border-0 shadow">-->
+<!--                            <img src="assets/assets/david.jpeg" class="card-img-top" alt="...">-->
+<!--                            <div class="card-body text-center">-->
+<!--                                <h5 class="card-title mb-0">דויד גרמן</h5>-->
+<!--                                <div class="card-text text-black-50">מנהל טכנולוגי </div>-->
+<!--                                <hr class="teamhr">-->
+<!--                                <div class="social">-->
+<!--                                    <a href="https://github.com/GermanDavid" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>-->
+<!--                                    <a href="https://www.linkedin.com/in/davidgermann/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    &lt;!&ndash; Team Member 3 &ndash;&gt;-->
+<!--                    <div class="col-xl-3 col-md-6 mb-4">-->
+<!--                        <div class="card border-0 shadow">-->
+<!--                            <img src="assets/assets/ehud.jpeg" class="card-img-top" alt="...">-->
+<!--                            <div class="card-body text-center">-->
+<!--                                <h5 class="card-title mb-0">אהוד ברדה</h5>-->
+<!--                                <div class="card-text text-black-50">מנהל מוצר</div>-->
+<!--                                <hr class="teamhr">-->
+<!--                                <div class="social">-->
+<!--                                    <a href="#" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>-->
+<!--                                    <a href="#" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    &lt;!&ndash; Team Member 4 &ndash;&gt;-->
+<!--                    <div class="col-xl-3 col-md-6 mb-4">-->
+<!--                        <div class="card border-0 shadow">-->
+<!--                            <img src="assets/assets/yarin.jpeg" class="card-img-top" alt="...">-->
+<!--                            <div class="card-body text-center">-->
+<!--                                <h5 class="card-title mb-0">ירין מיכאל בוזגלו </h5>-->
+<!--                                <div class="card-text text-black-50">מנכ"ל</div>-->
+<!--                                <hr class="teamhr">-->
+<!--                                <div class="social">-->
+<!--                                    <a href="https://github.com/YarinBou" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>-->
+<!--                                    <a href="https://www.linkedin.com/in/yarin-bouzaglo/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
+<!--    &lt;!&ndash; Contact&ndash;&gt;-->
+    <section class="page-section" id="contact"  style="background-color: #8dbf22; color: white" >
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
